// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bento .addPlugin() works as expected 1`] = `
Object {
  "plugins": Array [
    Object {
      "args": Array [],
      "name": "html-webpack-plugin",
    },
  ],
  "rules": Array [],
}
`;

exports[`Bento .addPlugins() works as expected 1`] = `
Object {
  "plugins": Array [
    Object {
      "args": Array [],
      "name": "html-webpack-plugin",
    },
  ],
  "rules": Array [],
}
`;

exports[`Bento .addRule() works as expected 1`] = `
Object {
  "plugins": Array [],
  "rules": Array [
    Object {
      "ext": Array [
        "js",
      ],
      "rule": Object {
        "include": Array [
          "<cwd>/app",
        ],
        "use": "babel-loader",
      },
    },
  ],
}
`;

exports[`Bento .addRules() works as expected 1`] = `
Object {
  "plugins": Array [],
  "rules": Array [
    Object {
      "ext": Array [
        "js",
      ],
      "rule": Object {
        "include": Array [
          "<cwd>/app",
        ],
        "use": Array [
          "babel-loader",
        ],
      },
    },
    Object {
      "ext": Array [
        "css",
      ],
      "rule": Object {
        "include": Array [
          "<cwd>/app",
        ],
        "use": "style-loader",
      },
    },
  ],
}
`;

exports[`Bento .export() works as expected in \`developement\` env 1`] = `
Object {
  "context": "<cwd>",
  "devtool": "cheap-module-eval-source-map",
  "entry": Object {
    "main": "./app/scripts/main.js",
  },
  "module": Object {
    "rules": Array [],
  },
  "name": "bento",
  "output": Object {
    "filename": "[name].js",
    "path": "<cwd>/public",
    "publicPath": "/",
  },
  "plugins": Array [
    HtmlWebpackPlugin {
      "options": Object {
        "cache": true,
        "chunks": "all",
        "compile": true,
        "excludeChunks": Array [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": true,
        "minify": false,
        "showErrors": true,
        "template": "<cwd>/node_modules/html-webpack-plugin/default_index.ejs",
        "title": "Bento",
        "xhtml": false,
      },
    },
  ],
  "resolve": Object {
    "alias": Object {
      "~": "<cwd>/app",
    },
  },
}
`;

exports[`Bento .export() works as expected in \`production\` env 1`] = `
Object {
  "context": "<cwd>",
  "devtool": "source-map",
  "entry": Object {
    "main": "./app/scripts/main.js",
  },
  "module": Object {
    "rules": Array [],
  },
  "name": "bento",
  "output": Object {
    "filename": "[name].[chunkhash].js",
    "path": "<cwd>/public",
    "publicPath": "/",
  },
  "plugins": Array [],
  "resolve": Object {
    "alias": Object {
      "~": "<cwd>/app",
    },
  },
}
`;

exports[`Bento .set() works as expected with \`sourceMap\` 1`] = `
Object {
  "context": "<cwd>",
  "devtool": null,
  "entry": Object {
    "main": "./app/scripts/main.js",
  },
  "module": Object {
    "rules": Array [],
  },
  "name": "bento",
  "output": Object {
    "filename": "[name].js",
    "path": "<cwd>/public",
    "publicPath": "/",
  },
  "plugins": Array [],
  "resolve": Object {
    "alias": Object {
      "~": "<cwd>/app",
    },
  },
}
`;
